# SDL2_Particle_Simulation

./: CMakeLists.txt  Particle.cpp  Particle.h  README.md  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h  main.cpp
cmake/: CMakeLists.txt
cmake_modules/: FindSDL2.cmake
include/: Particle.h  Screen.h  Swarm.h
src/: Particle.cpp  Screen.cpp  Swarm.cpp  main.cpp
